# autoTrading

./: .gitignore  Dockerfile  README.md  auto_report.py  backtest_runner.py  backtest_strategy.py  challenge_trading.py  config.json  config.py  main.ipynb  main.py  pyproject.toml  requirements.txt  restructure.sh  run_multi_backtest.py  sentiment_analysis.py  strategy_utils.py  visualizer.py  volatility_alert.py
ai_models/: price_predictor.py  rl_trainer.py
challenge/: rl_strategy.py
docker/: Dockerfile  docker-compose.yml
docs/: README.md  code_analysis_summary.md  development_rules.md  setup.md  setup_and_troubleshooting.md
docs/modules/: challenge_trading.md  notifier.md
mcp/: experiment_context.json  run_mcp_experiment.py
mcp/results/: BTC-USD_2023-10-01_2023-12-30_result.json  DOGE-USD_2023-10-01_2023-12-30_result.json  ETH-USD_2023-10-01_2023-12-30_result.json  SOL-USD_2023-10-01_2023-12-30_result.json  SPY_2023-10-01_2023-12-30_result.json  experiment_result.json  robustness_summary_breakout_volume_surge.csv
mcp/results_debug/: debug_BTC-USD_2023-07-01_2023-12-31_1h_atr_sl_multiplier1.5_atr_tp_multiplier2.0_pullback_threshold0.05_rsi_period10_sma_long_period20_sma_short_period7.json
results/: experiment_summary.csv
scripts/: auto_report.py
src/: challenge_trading.py  main.py
src/ai_models/: backtest_custom_env.py  price_predictor.py  rl_environment.py  rl_trainer.py  train_custom_env.py  tune_hyperparameters.py
src/analysis/: sentiment.py  sentiment_analysis.py  visualizer.py  volatility.py  volatility_alert.py
src/backtest/: backtest_runner.py
src/backtesting/: backtest_runner.py  backtest_runner_vbt.py
src/challenge/: rl_strategy.py  strategy.py
src/config/: settings.py
src/core/: portfolio.py
src/crypto_trader/: ExampleFreqAIStrategy.py  custom_features.py  freqai_trainer.py
src/utils/: common.py  (+6 more)
tests/: test_common.py  test_database.py  test_price_predictor.py  test_rl_environment.py  test_settings.py
(+10 files in other folders)
