[project]
name = "trading"
version = "0.1.0"
description = ""
authors = [
    {name = "projectSylas",email = "didldldl@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "alpaca-trade-api (>=3.2.0,<4.0.0)",
    "python-binance (>=1.0.28,<2.0.0)",
    "mexc-api (>=0.0.2,<0.0.3)",
    "pandas (>=2.2.3,<3.0.0)",
    "yfinance (>=0.2.55,<0.3.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "ta (>=0.11.0,<0.12.0)",
    "backtrader (>=1.9.78.123,<2.0.0.0)",
    "newsapi-python (>=0.2.7,<0.3.0)",
    "transformers (>=4.51.1,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "prophet (>=1.1.6,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
