[tool.poetry]
name = "trading-app"
version = "0.1.0"
description = ""
authors = ["projectSylas <didldldl@naver.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = ">=1.1.0,<2.0.0"
alpaca-trade-api = ">=3.2.0,<4.0.0"
python-binance = ">=1.0.28,<2.0.0"
mexc-api = ">=0.0.2,<0.0.3"
yfinance = ">=0.2.55,<0.3.0"
plotly = ">=6.0.1,<7.0.0"
schedule = ">=1.2.2,<2.0.0"
requests = ">=2.32.3,<3.0.0"
ta = ">=0.11.0,<0.12.0"
newsapi-python = ">=0.2.7,<0.3.0"
transformers = ">=4.51.1,<5.0.0"
torch = ">=2.6.0,<3.0.0"
prophet = ">=1.1.6,<2.0.0"
scipy = ">=1.15.2,<2.0.0"
pydantic-settings = ">=2.8.1,<3.0.0"
pandas-ta = ">=0.3.14b0,<0.4.0"
pandas = ">=1.5.0,<1.6.0"
matplotlib = ">=3.10.1,<4.0.0"
backtrader = "1.9.78.123"
numpy = ">=1.26.0,<2.0.0"
setuptools = "^78.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
